# MonkeyType

./: .deepsource.toml  .flake8  .gitignore  .pyre_configuration  CHANGES.rst  CONTRIBUTING.rst  LICENSE  PATENTS  Pipfile  README.rst  RELEASING.rst  TODO.rst  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: test.yml
demo/: README.md  inbox.py  models.py  mypy.ini  pytest.ini  requirements.txt  setup.cfg  test_inbox.py
doc/: Makefile  commandline.rst  conf.py  configuration.rst  faq.rst  generation.rst  index.rst  make.bat  stores.rst  tracing.rst
monkeytype/: StructuredDict.py  Swordk_map.py  __init__.py  __main__.py  cli.py  compat.py  config.py  encoding.py  exceptions.py  stubs.py  tracing.py  type_checking_imports_transformer.py  type_dict.py  type_metadata.py  type_util.py  typing.py  typing.pyi  util.py
monkeytype/db/: base.py  reduced_sqlite.py  sqlite.py
monkeytype/type_metadata/: __base__.py  __init__.py  encode_decode.py
tests/: conftest.py  cythontest.pyx  test_cli.py  test_compat.py  test_config.py  test_encoding.py  test_sample.py  test_sqlite_store.py  test_stubs.py  test_tracing.py  test_type_checking_imports_transformer.py  test_type_metadata.py  test_type_util.py  test_typing.py  test_util.py  util.py
tests/db/: test_base.py  test_sqlite.py  test_stores.py
tests/testmodule/: __init__.py  submodule1.py
