[metadata]
name = MonkeyType
author = Matt Page
author_email = mpage@instagram.com
license = BSD
description = Generating type annotations from sampled production types
url = https://github.com/instagram/MonkeyType
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
zip_safe = False
install_requires = mypy_extensions; retype
python_requires = >=3.6
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    monkeytype=monkeytype.cli:entry_point_main

[options.package_data]
monkeytype = py.typed
