[metadata]
name = MonkeyType
version = 22.2.0.dev1
description = Generating type annotations from sampled production types
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
license = BSD
author = Matt Page
author_email = mpage@instagram.com
url = https://github.com/Instagram/MonkeyType
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include-package-data = True
python_requires = >= 3.7
install_requires =
    mypy_extensions
    django-stubs
    libcst>=0.4.4

[options.packages.find]
exclude =
    tests.*
    tests

[options.package_data]
monkeytype = py.typed

[options.extras_require]
dev =
    black
    isort
    flake8
    pytest
    mypy
    sphinx
    twine
    django
    tox
    libcst
    importlib_metadata

[options.entry_points]
console_scripts =
    monkeytype = monkeytype.cli:entry_point_main

[isort]
profile = black

[flake8]
max-line-length = 120
extend-ignore =
    # E203 whitespace before ':'
    # https://github.com/psf/black/issues/315
    E203
per-file-ignores =
    tests/test_stubs.py:F821
    tests/test_typing.py:F821

[mypy]
python_version = 3.7
platform = linux
show_column_numbers = True
show_error_codes = True
follow_imports = normal
strict = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-parser.*]
ignore_missing_imports = True

[tool:black]
line-length = 80

[tool:pytest]
addopts = --tb short
